# Cloud-Applied-Generative-AI-Engineering-Complete-Guide

./: .gitignore  README.md  helloword.ipynb
Cloud_Generative_AI/chat-gpt_legacy/01_hello_word/: hello-word.ipynb
Cloud_Generative_AI/cloud_native_computing/fastapi/fastapi_one_basic_concepts/: pyproject.toml
Cloud_Generative_AI/cloud_native_computing/fastapi/fastapi_one_basic_concepts/fastapi_one_basic_concepts/: main_fastapi.py  request.py
Cloud_Generative_AI/cloud_native_computing/fastapi/fastapi_one_basic_concepts/fastapi_one_basic_concepts/pydantic/: 01_pydantic.ipynb
Cloud_Generative_AI/cloud_native_computing/fastapi/fastapi_one_basic_concepts/fastapi_one_basic_concepts/pytest/: pytest.ipynb
Cloud_Generative_AI/cloud_native_computing/fastapi/fastapi_one_basic_concepts/fastapi_one_basic_concepts/pytest/tests/: test_sample.py  test_sample1.py
Cloud_Generative_AI/cloud_native_computing/fastapi/fastapi_one_basic_concepts/fastapi_one_basic_concepts/request/: 01_request.ipynb  request.ipynb
Cloud_Generative_AI/cloud_native_computing/my_first_docker_compose/: compose.yml
Cloud_Generative_AI/cloud_native_computing/optimized-docker-image/: Dockerfile
Cloud_Generative_AI/cloud_native_computing/sqlmodel/sqlmodel_basics/sqlmodel_curd/: pyproject.toml
Cloud_Generative_AI/jupyter notebook/: Beginners_Guide_Wasam.ipynb  hello_word.ipynb
Cloud_Generative_AI/microservices-and-poetry/python-project-setup/creating_poetry_setup/: pyproject.toml
Cloud_Generative_AI/microservices-and-poetry/python-project-setup/creating_poetry_setup/creating_poetry_setup/: main.py
Generative AI/02_multiple_roles/: multiple_roles.ipynb
Generative AI/03_streaming_response/: streaming_response.ipynb
Generative AI/hello_word/: hello-word.ipynb
Generative AI/microservices-and -poetry/python-fastapi-docker/my_first_fastapi_docker/: Dockerfile.dev  pyproject.toml
Generative AI/microservices-and-poetry/fastapi/fastapi_one_basic_concepts/: pyproject.toml
Generative AI/microservices-and-poetry/fastapi/fastapi_one_basic_concepts/fastapi_one_basic_concepts/: depends.py  main.py  pydantic_practice.py  request.py  simple_book_api.py
python-language/python-core-concepts/: youtube.txt
python-language/python-core-concepts/14_api_example/api_pratice_example/: User_data.txt  pyproject.toml
python-language/python-core-concepts/14_api_example/api_pratice_example/api_pratice_example/: main.py
python-language/python_core_concepts/: User_data.txt  pyproject.toml
python-language/python_core_concepts/python_core_concepts/01_class(Hello World- String)/: class1.ipynb  class1.py
python-language/python_core_concepts/python_core_concepts/02_(string_fstring)/: string_class.ipynb
python-language/python_core_concepts/python_core_concepts/02b_(numbers)/: numbers.ipynb
python-language/python_core_concepts/python_core_concepts/03_(operators)/: operators.ipynb
python-language/python_core_concepts/python_core_concepts/05_conditionals/: age_group_categorization.py  leap_year_checker.py  movie_ticket_pricing.py  password_strength_checker.py  pet_food_recommendation.py  transportation_mode_selection.py  weather_activity_suggestion.py
python-language/python_core_concepts/python_core_concepts/06_loops/: Validate_input.py  factorial_calculator.py  find_first_non_repeated_character.py  list_uniqueness_checker.py
python-language/python_core_concepts/python_core_concepts/07_functions/: 4_function_returning_multiple_values.py
python-language/python_core_concepts/python_core_concepts/09_opp/: 4_solution.py  8_solution.py  all_solutions.py  hitesh_opp.ipynb
python-language/python_core_concepts/python_core_concepts/11_error_handling/: error_handle.py  youtube_manager.py
python-language/python_core_concepts/python_core_concepts/12_database_sqlite3/: youtube_video_manager_db.py
python-language/python_core_concepts/python_core_concepts/13_handling_api/: api_short notes.py
python-language/python_core_concepts/python_core_concepts/14_projects/: password_generator.py
(+153 files in other folders)
