[tool.poetry]
name = "python-core-concepts"
version = "0.1.0"
description = ""
authors = ["ChWasam <wasam.developer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
types-requests = "^2.32.0.20240622"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
