[tool.poetry]
name = "fastapi-one-basic-concepts"
version = "0.1.0"
description = ""
authors = ["ChWasam <wasam.developer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
requests = "^2.31.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
httpie = "^3.2.2"
pydantic = "^2.7.1"
types-requests = "^2.31.0.20240406"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
