[tool.poetry]
name = "api-pratice-example"
version = "0.1.0"
description = ""
authors = ["ChWasam <wasam.developer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
types-requests = "^2.31.0.20240311"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
